Added redirect to APNSViewController passing the count value

--- a/Firebase/PushTest/Base.lproj/Main.storyboard
+++ b/Firebase/PushTest/Base.lproj/Main.storyboard
@@ -112,6 +112,50 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="119.86607142857142"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="q1E-lz-JAt">
+            <objects>
+                <viewController storyboardIdentifier="APNSViewController" id="Kbt-zk-Glr" customClass="APNSViewController" customModule="PushTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wzk-MM-rMX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="g7C-4J-nsG">
+                                <rect key="frame" x="148.5" y="438" width="117" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nx-MD-F4i">
+                                        <rect key="frame" x="0.0" y="0.0" width="51" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIY-od-fz0">
+                                        <rect key="frame" x="66" y="0.0" width="51" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="51" id="pTi-Ul-BhJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="g7C-4J-nsG" firstAttribute="centerX" secondItem="wzk-MM-rMX" secondAttribute="centerX" id="sKr-4b-bGV"/>
+                            <constraint firstItem="g7C-4J-nsG" firstAttribute="centerY" secondItem="wzk-MM-rMX" secondAttribute="centerY" id="zxk-jm-qKZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1qL-EL-gXQ"/>
+                    </view>
+                    <connections>
+                        <outlet property="countLabel" destination="hIY-od-fz0" id="2RH-35-ILn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ava-EK-l6K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1771" y="120"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ERZ-iS-eKy">
             <objects>
